@@ -1,7 +1,15 @@
 Version 0.9.X (2014-XX-XX)
 --------------------------
+Schemas: added schema for collection of all enrichments (#806)
+Schemas: added campaigns schema (#805)
+Schemas: added ip_anon schema (#804)
+Schemas: added ip_to_geo schema (#803)
+EmrEtlRunner: Removed enrichment-specific code (#811)
+EmrEtlRunner: Replaced enrichment-specific args to Hadoop Enrich with enrichments JSON (#808)
+Scala Common Enrich: bumped to 0.5.0                                                    - TODO
 Scala Common Enrich: stored etl_tstamp in new field in CanonicalOutput (#818)
 Scala Common Enrich: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#836)
+Scala Hadoop Enrich: bumped to Scala Common Enrich 0.5.0                                - TODO
 Scala Hadoop Enrich: passed etl_tstamp into Scala Common Enrich (#817)
 Scala Hadoop Enrich: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#835)
 Redshift: bumped table-def to 0.4.0
